Create bower and update package.json

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "makesure",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.5.0",
+  "description": "Creates validation schemas for your objects.",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha test/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@bitbucket.org:sadjow/validation-project.git"
-  },
+  "repository": "sadjow/makesure",
   "keywords": [
     "validation",
     "validate",
