--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Sadjow Leão <sadjow@gmail.com>"
   ],
-  "description": "Creates validation schemas for your objects.",
+  "description": "Create validation schemas for your objects.",
   "keywords": [
     "validation",
     "validate",
