make some chain validation definition tests

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "validator": "^3.22.0"
   },
   "dependencies": {
+    "merge": "^1.2.0",
     "q": "^1.0.1",
     "utils-merge": "^1.0.0"
   }
