add sinon as dev dependency

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.10.0",
     "mocha": "^2.0.1",
     "should": "^4.1.0",
+    "sinon": "^1.11.1",
     "supertest": "^0.14.0",
     "validator": "^3.22.0"
   },
