--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,23 @@
   ],
   "description": "JavaScript object validation made easy.",
   "keywords": [
-    "validation",
-    "validate",
-    "schema",
-    "nested",
-    "validator",
-    "errors",
     "error",
-    "makesure"
+    "errors",
+    "form",
+    "makesure",
+    "manager",
+    "nested",
+    "object",
+    "sanitization",
+    "sanitize",
+    "sanitizer",
+    "sanitizes",
+    "sanitizing",
+    "schema",
+    "validate",
+    "validation",
+    "validations",
+    "validator",
   ],
   "license": "MIT",
   "homepage": "https://github.com/sadjow/makesure",
