--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
   },
   "repository": "sadjow/makesure",
   "keywords": [
-    "validation",
-    "validate",
-    "form",
-    "schema",
-    "manager",
     "error",
     "errors",
-    "makesure"
+    "form",
+    "makesure",
+    "manager",
+    "nested",
+    "object",
+    "sanitization",
+    "sanitize",
+    "sanitizer",
+    "sanitizes",
+    "sanitizing",
+    "schema",
+    "validate",
+    "validation",
+    "validations",
+    "validator",
   ],
   "author": "Sadjow Leão <sadjow@gmail.com>",
   "license": "MIT",
