--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "validate",
     "validation",
     "validations",
-    "validator",
+    "validator"
   ],
   "license": "MIT",
   "homepage": "https://github.com/sadjow/makesure",
