--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "validate",
     "validation",
     "validations",
-    "validator",
+    "validator"
   ],
   "author": "Sadjow Leão <sadjow@gmail.com>",
   "license": "MIT",
