--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "validator"
   ],
   "author": "Sadjow Leão <sadjow@gmail.com>",
-  "license": "MIT",
+  "licenses": [
+    { "type": "MIT"
+    , "url": "https://github.com/sadjow/makesure/raw/master/LICENSE" }
+  ],
   "devDependencies": {
     "body-parser": "^1.9.2",
     "diacritics": "^1.2.1",
